--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Assingments</h1>
   <ul>
     <li><a href="./Day 0/index.html"> Day - 0</a></li>
+    <li><a href="./Day 1/index.html"> Day - 1</a></li>
   </ul>
   <body></body>
 </html>
