Done for laptop view remaining for mobile view

--- a/Day 2/1/index.html
+++ b/Day 2/1/index.html
@@ -97,8 +97,57 @@
     <section id="testimonials">
       <h3>Testimonials</h3>
       <hr />
-      <br />
-      <!--  -->
+      <div id="tcards">
+        <div>
+          <div>
+            <img class="dp" src="./images/A.jpg" alt="" />
+          </div>
+          <blockquote class="arrow_box">
+            <q>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+              et excepturi tempora atque autem nihil eius?
+            </q>
+            <div class="desg">
+              <p>-Natasha</p>
+              <p>
+                Managing Director at <span class="comp">Alpha Company</span>
+              </p>
+            </div>
+          </blockquote>
+        </div>
+        <div>
+          <div>
+            <img class="dp" src="./images/B.jpg" alt="" />
+          </div>
+          <blockquote class="arrow_box">
+            <q>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+              et excepturi tempora atque autem nihil eius?
+            </q>
+            <div class="desg">
+              <p>-Natasha</p>
+              <p>Managing Director at <span class="comp">Beta Company</span></p>
+            </div>
+          </blockquote>
+        </div>
+        <div>
+          <div>
+            <img class="dp" src="./images/C.jpg" alt="" />
+          </div>
+          <blockquote class="arrow_box">
+            <q>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+              et excepturi tempora atque autem nihil eius?
+            </q>
+            <div class="desg">
+              <p>-Natasha</p>
+              <p>
+                Managing Director at <span class="comp">Gamma Company</span>
+              </p>
+            </div>
+          </blockquote>
+        </div>
+      </div>
     </section>
   </body>
 </html>
