--- a/Day 2/1/index.html
+++ b/Day 2/1/index.html
@@ -110,7 +110,7 @@
             <div class="desg">
               <p>-Natasha</p>
               <p>
-                Managing Director at <span class="comp">Alpha Company</span>
+                Managing Director at <a href="#" class="comp">Alpha Company</a>
               </p>
             </div>
           </blockquote>
@@ -126,7 +126,9 @@
             </q>
             <div class="desg">
               <p>-Natasha</p>
-              <p>Managing Director at <span class="comp">Beta Company</span></p>
+              <p>
+                Managing Director at <a href="#" class="comp">Beta Company</a>
+              </p>
             </div>
           </blockquote>
         </div>
@@ -142,7 +144,7 @@
             <div class="desg">
               <p>-Natasha</p>
               <p>
-                Managing Director at <span class="comp">Gamma Company</span>
+                Managing Director at <a href="#" class="comp">Gamma Company</a>
               </p>
             </div>
           </blockquote>
