--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <ul>
     <li><a href="./Day 0/index.html"> Day - 0</a></li>
     <li><a href="./Day 1/index.html"> Day - 1</a></li>
+    <li><a href="./Day 2/index.html"> Day - 2</a></li>
   </ul>
   <body></body>
 </html>
