--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -26,7 +26,10 @@
             class="navbar-collapse justify-content-around flex-lg-row flex-column"
             id="navbarSupportedContent"
           >
-            <div class="nav-item d-flex">
+            <div
+              class="nav-item d-flex flex-wrap justify-content-center"
+              style="padding-right: 10%"
+            >
               <div>
                 <a class="nav-link active" aria-current="page" href="#">
                   <i class="fas fa-user"></i> My Account</a
@@ -57,7 +60,7 @@
             <div class="nav-item d-flex">
               <div>
                 <span>currency : </span>
-                <select class="b-select">
+                <select class="b-select bg-light">
                   <option value="1" selectet>USD</option>
                   <option value="2">INR</option>
                   <option value="3">GPB</option>
@@ -77,9 +80,13 @@
       </nav>
     </section>
 
-    <section id="logo" class="d-flex justify-content-around pt-5">
-      <img src="./assets/images/logo.png" alt="logo" />
-      <div class="pt-4">
+    <section id="logo" class="d-flex justify-content-between pt-3">
+      <img
+        style="padding-left: 12%"
+        src="./assets/images/logo.png"
+        alt="logo"
+      />
+      <div class="pt-4" style="padding-right: 12%">
         <a href="" class="notification btn btn-outline-dark">
           Cart - <span class="text-primary"> $100 </span>
           <i class="fas fa-cart-plus"></i>
@@ -90,7 +97,7 @@
 
     <section id="top-bar" class="mt-5">
       <nav class="navbar sticky-top navbar-expand-lg navbar-light">
-        <div class="container-fluid bg-light">
+        <div class="container-fluid bg-light" style="padding-left: 12%">
           <button
             class="navbar-toggler w-100"
             type="button"
@@ -105,30 +112,36 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link active p-3" aria-current="page" href="#"
+                  >HOME</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">PAGE</a>
+                <a class="nav-link p-3" aria-current="page" href="#">PAGE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#"
+                <a class="nav-link p-3" aria-current="page" href="#"
                   >SINGLE PRODUCT</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">CARE</a>
+                <a class="nav-link p-3" aria-current="page" href="#">CARE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">CHECKOUT</a>
+                <a class="nav-link p-3" aria-current="page" href="#"
+                  >CHECKOUT</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">CATEGORY</a>
+                <a class="nav-link p-3" aria-current="page" href="#"
+                  >CATEGORY</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">OTHERS</a>
+                <a class="nav-link p-3" aria-current="page" href="#">OTHERS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">CONTACT</a>
+                <a class="nav-link p-3" aria-current="page" href="#">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -136,7 +149,7 @@
       </nav>
     </section>
 
-    <section id="carousel">
+    <section id="carousel" class="p-3">
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -168,6 +181,14 @@
               class="d-block w-100"
               alt="..."
             />
+            <div class="carousel-caption d-none d-md-block text-left w-25">
+              <h3>i Phone <span class="caption">6 Plus</span></h3>
+              <p class="text-left">select Item</p>
+              <a href="" class="btn btn-group btn-outline-dark rounded-pill">
+                <i class="fas fa-angle-right border-1 rounded-circle p-1"></i>
+                Shop Now
+              </a>
+            </div>
           </div>
           <div class="carousel-item">
             <img
@@ -175,6 +196,14 @@
               class="d-block w-100"
               alt="..."
             />
+            <div class="carousel-caption d-none d-md-block text-left w-25">
+              <h3>Apple <span class="caption">Store iPod</span></h3>
+              <p class="text-left">select Item</p>
+              <a href="" class="btn btn-group btn-outline-dark rounded-pill">
+                <i class="fas fa-angle-right border-1 rounded-circle p-1"></i>
+                Shop Now
+              </a>
+            </div>
           </div>
           <div class="carousel-item">
             <img
@@ -182,6 +211,14 @@
               class="d-block w-100"
               alt="..."
             />
+            <div class="carousel-caption d-none d-md-block text-left w-25">
+              <h3>Apple <span class="caption">Store iPod</span></h3>
+              <p class="text-left">select Item</p>
+              <a href="" class="btn btn-group btn-outline-dark rounded-pill">
+                <i class="fas fa-angle-right border-1 rounded-circle p-1"></i>
+                Shop Now
+              </a>
+            </div>
           </div>
           <div class="carousel-item">
             <img
@@ -189,6 +226,14 @@
               class="d-block w-100"
               alt="..."
             />
+            <div class="carousel-caption d-none d-md-block text-left w-25">
+              <h3>Buy One, get one <span class="caption">50% off</span></h3>
+              <p class="text-left">select Item</p>
+              <a href="" class="btn btn-group btn-outline-dark rounded-pill">
+                <i class="fas fa-angle-right border-1 rounded-circle p-1"></i>
+                Shop Now
+              </a>
+            </div>
           </div>
         </div>
         <a
@@ -215,21 +260,21 @@
     <section id="mcards">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="card bg-primary col-2 m-3">
+          <div class="card bg-primary col-2 m-3 mx-4">
             <div>
               <i class="fas fa-redo"></i>
             </div>
             <p>30 day return</p>
           </div>
-          <div class="card col-2 bg-warning m-3">
+          <div class="card col-2 bg-warning m-3 mx-4">
             <div><i class="fas fa-truck-moving"></i></div>
             <p>30 day return</p>
           </div>
-          <div class="card col-2 bg-danger m-3">
+          <div class="card col-2 bg-danger m-3 mx-4">
             <div><i class="fas fa-lock"></i></div>
             <p>30 day return</p>
           </div>
-          <div class="card col-2 bg-success m-3">
+          <div class="card col-2 bg-success m-3 mx-4">
             <div><i class="fas fa-gift"></i></div>
             <p>30 day return</p>
           </div>
@@ -239,33 +284,33 @@
 
     <section class="latest mt-4">
       <h2 class="text-center">Latest Products</h2>
-      <div class="text-end" style="width: 93vw">
+      <div class="text-end" style="width: 88vw">
         <button class="btn btn-danger m-2">prev</button>
         <button class="btn btn-danger m-2">next</button>
       </div>
-      <div class="container">
+      <div class="container" style="width: 82vw">
         <div class="row justify-content-center">
-          <div class="col-2 m-3">
+          <div class="col-5 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
           </div>
-          <div class="col-2 m-3">
+          <div class="col-5 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
           </div>
-          <div class="col-2 m-3">
+          <div class="col-5 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
           </div>
-          <div class="col-2 m-3">
+          <div class="col-5 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
           </div>
-          <div class="col-2 m-3">
+          <div class="col-5 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
@@ -276,13 +321,13 @@
     </section>
 
     <section class="brands">
-      <div class="text-end" style="width: 93vw">
-        <button class="btn btn-danger m-2">prev</button>
-        <button class="btn btn-danger m-2">next</button>
+      <div class="text-end" style="width: 88vw">
+        <button class="btn btn-danger mx-2">prev</button>
+        <button class="btn btn-danger mx-2">next</button>
       </div>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-2 m-4">
+          <div class="col-4 col-lg-2 mx-4">
             <img
               class="b-logo"
               src="./assets/images/nokia.svg"
@@ -290,7 +335,7 @@
               srcset=""
             />
           </div>
-          <div class="col-2 m-4">
+          <div class="col-4 col-lg-2 mx-4">
             <img
               class="b-logo"
               src="./assets/images/nokia.svg"
@@ -298,7 +343,7 @@
               srcset=""
             />
           </div>
-          <div class="col-2 m-4">
+          <div class="col-4 col-lg-2 mx-4">
             <img
               class="b-logo"
               src="./assets/images/nokia.svg"
@@ -306,7 +351,7 @@
               srcset=""
             />
           </div>
-          <div class="col-2 m-4">
+          <div class="col-4 col-lg-2 mx-4">
             <img
               class="b-logo"
               src="./assets/images/nokia.svg"
@@ -320,9 +365,9 @@
     </section>
 
     <section id="all">
-      <div class="container">
+      <div class="container" style="width: 80vw">
         <div class="row justify-content-center">
-          <div class="col-4" id="top-sell">
+          <div class="col-10 col-lg-4" id="top-sell">
             <!--  -->
             <div class="d-flex p-3 justify-content-between">
               <h4 class="">Top Sellers</h4>
@@ -417,7 +462,7 @@
             </div>
           </div>
 
-          <div id="recent-view" class="col-4">
+          <div id="recent-view" class="col-10 col-lg-4">
             <!--  -->
             <div class="d-flex p-3 justify-content-between">
               <h4 class="">Recently Viewed</h4>
@@ -511,7 +556,7 @@
               </div>
             </div>
           </div>
-          <div id="top-new" class="col-4">
+          <div id="top-new" class="col-10 col-lg-4">
             <div class="d-flex p-3 justify-content-between">
               <h4 class="">Top New</h4>
               <button class="btn btn-primary">View All</button>
