--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -68,7 +68,7 @@
               </div>
               <div class="float-end">
                 <span>language : </span>
-                <select class="b-select">
+                <select class="b-select bg-light">
                   <option value="1" selectet>English</option>
                   <option value="2">French</option>
                   <option value="3">German</option>
@@ -88,7 +88,7 @@
       />
       <div class="pt-4" style="padding-right: 12%">
         <a href="" class="notification btn btn-outline-dark">
-          Cart - <span class="text-primary"> $100 </span>
+          Cart - <span class="text-blue"> $100 </span>
           <i class="fas fa-cart-plus"></i>
           <span class="badge">3</span>
         </a>
@@ -242,7 +242,8 @@
           role="button"
           data-bs-slide="prev"
         >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <i class="fas fa-angle-left carousel-prev-next"></i>
+          <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
           <span class="visually-hidden bg-primary">Previous</span>
         </a>
         <a
@@ -251,7 +252,7 @@
           role="button"
           data-bs-slide="next"
         >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <i class="fas fa-angle-right carousel-prev-next"></i>
           <span class="visually-hidden bg-primary">Next</span>
         </a>
       </div>
@@ -290,27 +291,27 @@
       </div>
       <div class="container" style="width: 82vw">
         <div class="row justify-content-center">
-          <div class="col-5 col-lg-2 m-3">
+          <div class="col-8 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
           </div>
-          <div class="col-5 col-lg-2 m-3">
+          <div class="col-8 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
           </div>
-          <div class="col-5 col-lg-2 m-3">
+          <div class="col-8 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
           </div>
-          <div class="col-5 col-lg-2 m-3">
+          <div class="col-8 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
           </div>
-          <div class="col-5 col-lg-2 m-3">
+          <div class="col-8 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
             <p class="fw-bold">Nokia Lumia 1320</p>
             <p><span class="text-primary">$1000</span> <del>$1500</del></p>
@@ -376,8 +377,40 @@
 
             <div class="products">
               <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
+                    <!--  -->
+                    <img
+                      class="prod-img p-1"
+                      src="./assets/images/lumia.jpg"
+                      alt=""
+                      srcset=""
+                    />
+                  </div>
+                  <div class="col-8">
+                    <!--  -->
+                    <p>Nokia Lumia - 2015</p>
+                    <p>
+                      <span class="fas fa-star checked"></span>
+                      <span class="fa fa-star checked"></span>
+                      <span class="fa fa-star checked"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </p>
+
+                    <p>
+                      <span class="text-primary">$1000</span> <del>$1500</del>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="container p-3">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
                     <!--  -->
                     <img
                       class="prod-img"
@@ -404,36 +437,10 @@
                 </div>
               </div>
               <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
-                    <!--  -->
-                    <img
-                      class="prod-img"
-                      src="./assets/images/lumia.jpg"
-                      alt=""
-                      srcset=""
-                    />
-                  </div>
-                  <div class="col-8">
-                    <!--  -->
-                    <p>Nokia Lumia - 2015</p>
-                    <p>
-                      <span class="fas fa-star checked"></span>
-                      <span class="fa fa-star checked"></span>
-                      <span class="fa fa-star checked"></span>
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                    </p>
-
-                    <p>
-                      <span class="text-primary">$1000</span> <del>$1500</del>
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
                     <!--  -->
                     <img
                       class="prod-img"
@@ -471,8 +478,10 @@
 
             <div class="products">
               <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
                     <!--  -->
                     <img
                       class="prod-img"
@@ -499,8 +508,10 @@
                 </div>
               </div>
               <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
                     <!--  -->
                     <img
                       class="prod-img"
@@ -527,8 +538,10 @@
                 </div>
               </div>
               <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
                     <!--  -->
                     <img
                       class="prod-img"
@@ -563,8 +576,10 @@
             </div>
             <div class="products">
               <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
                     <!--  -->
                     <img
                       class="prod-img"
@@ -591,8 +606,10 @@
                 </div>
               </div>
               <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
                     <!--  -->
                     <img
                       class="prod-img"
@@ -619,8 +636,10 @@
                 </div>
               </div>
               <div class="container p-3">
-                <div class="row">
-                  <div class="col-4">
+                <div class="row justify-content-center">
+                  <div
+                    class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
+                  >
                     <!--  -->
                     <img
                       class="prod-img"
