--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -19,6 +19,7 @@
     <title>R Store</title>
   </head>
   <body>
+    <!-- section for Top Navbar -->
     <section id="nav">
       <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
@@ -80,6 +81,7 @@
       </nav>
     </section>
 
+    <!-- section for logo and cart button -->
     <section id="logo" class="d-flex justify-content-between pt-3">
       <img
         style="padding-left: 12%"
@@ -95,6 +97,7 @@
       </div>
     </section>
 
+    <!-- Section for sticky nav-bar -->
     <section id="top-bar" class="mt-5">
       <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container-fluid bg-light" style="padding-left: 12%">
@@ -149,6 +152,7 @@
       </nav>
     </section>
 
+    <!-- section for products carousel -->
     <section id="carousel" class="p-3">
       <div
         id="carouselExampleIndicators"
@@ -243,7 +247,6 @@
           data-bs-slide="prev"
         >
           <i class="fas fa-angle-left carousel-prev-next"></i>
-          <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
           <span class="visually-hidden bg-primary">Previous</span>
         </a>
         <a
@@ -258,10 +261,11 @@
       </div>
     </section>
 
+    <!-- section for cards() -->
     <section id="mcards">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="card bg-primary col-2 m-3 mx-4">
+          <div class="card ctest bg-primary col-2 m-3 mx-4">
             <div>
               <i class="fas fa-redo"></i>
             </div>
@@ -269,15 +273,15 @@
           </div>
           <div class="card col-2 bg-warning m-3 mx-4">
             <div><i class="fas fa-truck-moving"></i></div>
-            <p>30 day return</p>
+            <p>Free Shipping</p>
           </div>
           <div class="card col-2 bg-danger m-3 mx-4">
             <div><i class="fas fa-lock"></i></div>
-            <p>30 day return</p>
+            <p>Secure Payments</p>
           </div>
           <div class="card col-2 bg-success m-3 mx-4">
             <div><i class="fas fa-gift"></i></div>
-            <p>30 day return</p>
+            <p>New Products</p>
           </div>
         </div>
       </div>
@@ -369,7 +373,6 @@
       <div class="container" style="width: 80vw">
         <div class="row justify-content-center">
           <div class="col-10 col-lg-4" id="top-sell">
-            <!--  -->
             <div class="d-flex p-3 justify-content-between">
               <h4 class="">Top Sellers</h4>
               <button class="btn btn-primary">View All</button>
@@ -381,7 +384,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img p-1"
                       src="./assets/images/lumia.jpg"
@@ -390,7 +392,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -411,7 +412,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img"
                       src="./assets/images/lumia.jpg"
@@ -420,7 +420,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -441,7 +440,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img"
                       src="./assets/images/lumia.jpg"
@@ -450,7 +448,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -470,7 +467,6 @@
           </div>
 
           <div id="recent-view" class="col-10 col-lg-4">
-            <!--  -->
             <div class="d-flex p-3 justify-content-between">
               <h4 class="">Recently Viewed</h4>
               <button class="btn btn-primary">View All</button>
@@ -482,7 +478,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img"
                       src="./assets/images/lumia.jpg"
@@ -491,7 +486,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -512,7 +506,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img"
                       src="./assets/images/lumia.jpg"
@@ -521,7 +514,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -542,7 +534,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img"
                       src="./assets/images/lumia.jpg"
@@ -551,7 +542,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -580,7 +570,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img"
                       src="./assets/images/lumia.jpg"
@@ -589,7 +578,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -610,7 +598,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img"
                       src="./assets/images/lumia.jpg"
@@ -619,7 +606,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -640,7 +626,6 @@
                   <div
                     class="col-6 col-md-4 col-lg-4 justify-content-center m-1 m-md-0 m-lg-0"
                   >
-                    <!--  -->
                     <img
                       class="prod-img"
                       src="./assets/images/lumia.jpg"
@@ -649,7 +634,6 @@
                     />
                   </div>
                   <div class="col-8">
-                    <!--  -->
                     <p>Nokia Lumia - 2015</p>
                     <p>
                       <span class="fas fa-star checked"></span>
@@ -666,7 +650,6 @@
                 </div>
               </div>
             </div>
-            <!--  -->
           </div>
         </div>
       </div>
