added comments and bug fixes

--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -27,10 +27,7 @@
             class="navbar-collapse justify-content-around flex-lg-row flex-column"
             id="navbarSupportedContent"
           >
-            <div
-              class="nav-item d-flex flex-wrap justify-content-center"
-              style="padding-right: 10%"
-            >
+            <div class="nav-item d-flex flex-wrap justify-content-center pr-10">
               <div>
                 <a class="nav-link active" aria-current="page" href="#">
                   <i class="fas fa-user"></i> My Account</a
@@ -83,12 +80,8 @@
 
     <!-- section for logo and cart button -->
     <section id="logo" class="d-flex justify-content-between pt-3">
-      <img
-        style="padding-left: 12%"
-        src="./assets/images/logo.png"
-        alt="logo"
-      />
-      <div class="pt-4" style="padding-right: 12%">
+      <img class="pl-12" src="./assets/images/logo.png" alt="logo" />
+      <div class="pt-4 pr-12">
         <a href="" class="notification btn btn-outline-dark">
           Cart - <span class="text-blue"> $100 </span>
           <i class="fas fa-cart-plus"></i>
@@ -100,7 +93,7 @@
     <!-- Section for sticky nav-bar -->
     <section id="top-bar" class="mt-5">
       <nav class="navbar sticky-top navbar-expand-lg navbar-light">
-        <div class="container-fluid bg-light" style="padding-left: 12%">
+        <div class="container-fluid bg-light pl-12">
           <button
             class="navbar-toggler w-100"
             type="button"
@@ -261,7 +254,7 @@
       </div>
     </section>
 
-    <!-- section for cards() -->
+    <!-- section for cards -->
     <section id="mcards">
       <div class="container">
         <div class="row justify-content-center">
@@ -287,13 +280,14 @@
       </div>
     </section>
 
-    <section class="latest mt-4">
+    <!-- section for latest items -->
+    <section id="latest" class="mt-4">
       <h2 class="text-center">Latest Products</h2>
-      <div class="text-end" style="width: 88vw">
+      <div class="text-end prev-next-container">
         <button class="btn btn-danger m-2">prev</button>
         <button class="btn btn-danger m-2">next</button>
       </div>
-      <div class="container" style="width: 82vw">
+      <div class="container">
         <div class="row justify-content-center">
           <div class="col-8 col-lg-2 m-3">
             <img src="./assets/images/lumia.jpg" alt="" srcset="" />
@@ -326,7 +320,7 @@
     </section>
 
     <section class="brands">
-      <div class="text-end" style="width: 88vw">
+      <div class="text-end prev-next-container">
         <button class="btn btn-danger mx-2">prev</button>
         <button class="btn btn-danger mx-2">next</button>
       </div>
@@ -343,7 +337,7 @@
           <div class="col-4 col-lg-2 mx-4">
             <img
               class="b-logo"
-              src="./assets/images/nokia.svg"
+              src="./assets/images/canon.svg"
               alt=""
               srcset=""
             />
@@ -351,7 +345,7 @@
           <div class="col-4 col-lg-2 mx-4">
             <img
               class="b-logo"
-              src="./assets/images/nokia.svg"
+              src="./assets/images/samsung.svg"
               alt=""
               srcset=""
             />
@@ -359,7 +353,7 @@
           <div class="col-4 col-lg-2 mx-4">
             <img
               class="b-logo"
-              src="./assets/images/nokia.svg"
+              src="./assets/images/oneplus.svg"
               alt=""
               srcset=""
             />
@@ -370,7 +364,7 @@
     </section>
 
     <section id="all">
-      <div class="container" style="width: 80vw">
+      <div class="container">
         <div class="row justify-content-center">
           <div class="col-10 col-lg-4" id="top-sell">
             <div class="d-flex p-3 justify-content-between">
