sticky nav bug fixed

--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <!-- section for logo and cart button -->
-    <section id="logo" class="d-flex justify-content-between pt-3">
+    <section id="logo" class="d-flex justify-content-between pt-3 mb-5">
       <img class="pl-12" src="./assets/images/logo.png" alt="logo" />
       <div class="pt-4 pr-12">
         <a href="" class="notification btn btn-outline-dark">
@@ -91,7 +91,7 @@
     </section>
 
     <!-- Section for sticky nav-bar -->
-    <section id="top-bar" class="mt-5">
+    <section id="top-bar" class="sticky-top">
       <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container-fluid bg-light pl-12">
           <button
@@ -106,7 +106,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active p-3" aria-current="page" href="#"
                   >HOME</a
