--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
+
+    <!-- bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+    <!-- custom styles -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- FontAwesome CDN -->
     <script
       src="https://kit.fontawesome.com/eb5ea08954.js"
       crossorigin="anonymous"
