--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -85,11 +85,11 @@
     <section id="logo" class="d-flex justify-content-between pt-3 mb-5">
       <img class="pl-12" src="./assets/images/logo.png" alt="logo" />
       <div class="pt-4 pr-12">
-        <a href="" class="notification btn btn-outline-dark">
+        <button href="" class="notification btn btn-outline-dark">
           Cart - <span class="text-blue"> $100 </span>
           <i class="fas fa-cart-plus"></i>
           <span class="badge">3</span>
-        </a>
+        </button>
       </div>
     </section>
 
