Assignmet 4 final commit

--- a/4_JavaScript/index.html
+++ b/4_JavaScript/index.html
@@ -21,7 +21,7 @@
         width: 100px;
       }
     </style>
-    <title>Cart Page</title>
+    <title>Product Cart</title>
   </head>
   <body>
     <div class="container">
