--- a/5_JS_Jquery/Registration_Page/index.htm
+++ b/5_JS_Jquery/Registration_Page/index.htm
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- CSS Files -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -17,26 +19,27 @@
   <body>
     <div
       class="d-flex justify-content-center align-content-center align-items-center"
-      style="height: 100vh"
     >
-      <!-- input types are text to skip html validation -->
+      <!-- input types are text and required atrribute is not used to skip html validation -->
       <form
-        class="p-4"
-        style="width: 50vh"
+        class="p-4 rounded"
         name="myform"
         action="./Submitted.html"
         onsubmit="return validateForm()"
       >
+        <h4 class="text-center pb-2">Registration Form</h4>
         <div class="form-group">
           <label for="email">Email address</label>
           <input type="text" class="form-control" id="email" name="email" />
         </div>
+
         <div class="form-group">
-          <label for="name">Name</label>
+          <label for="name"> Name </label>
           <input type="text" name="name" id="name" class="form-control" />
         </div>
+
         <div class="form-group">
-          <label for="gender">Gender</label>
+          <label for="gender"> Gender </label>
           <br />
           <div class="form-check-inline">
             <label class="form-check-label">
@@ -45,7 +48,8 @@
                 class="form-check-input"
                 name="gender"
                 value="male"
-              />Male
+              />
+              Male
             </label>
           </div>
           <div class="form-check-inline">
@@ -55,7 +59,8 @@
                 class="form-check-input"
                 name="gender"
                 value="female"
-              />Female
+              />
+              Female
             </label>
           </div>
           <div class="form-check-inline disabled">
@@ -65,27 +70,31 @@
                 class="form-check-input"
                 name="gender"
                 value="other"
-              />Other
+              />
+              Other
             </label>
           </div>
         </div>
+
         <div class="form-group">
-          <label for="phone">Phone No</label>
+          <label for="phone"> Phone No </label>
           <input type="text" class="form-control" id="phone" />
         </div>
 
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password"> Password </label>
           <input type="password" class="form-control" id="password" />
         </div>
+
         <div class="form-group">
-          <label for="cpassword">Confirm Password</label>
+          <label for="cpassword"> Confirm Password </label>
           <input type="password" class="form-control" id="cpassword" />
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
+    <!-- Imported External JS -->
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
