Fixed Submission Page loading error bug

--- a/5_JS_Jquery/Registration_Page/index.html
+++ b/5_JS_Jquery/Registration_Page/index.html
@@ -91,7 +91,9 @@
           <input type="password" class="form-control" id="cpassword" />
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary float-right">
+          Submit
+        </button>
       </form>
     </div>
     <!-- Imported External JS -->
