Added Assignment Links to Repo HomePage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <li><a href="./Day 1/index.html"> Day - 1</a></li>
     <li><a href="./Day 2/index.html"> Day - 2</a></li>
     <li><a href="./Day 3/index.html"> Day - 3</a></li>
+    <li><a href="./4_JavaScript/index.html"> 4 - JavaScript</a></li>
+    <li>
+      <a href="./5_JS_Jquery/Accordion/index.html"> 5 - jQuery Accordion</a>
+    </li>
+    <li>
+      <a href="./5_JS_Jquery/Registration_Page/index.html">
+        5 - JavaScript Form validation</a
+      >
+    </li>
   </ul>
   <body></body>
 </html>
