Form Validation Assignment Done, Radio button border color not changing bug

--- a/5_JS_Jquery/Registration_Page/index.html
+++ b/5_JS_Jquery/Registration_Page/index.html
@@ -75,8 +75,11 @@
             <label class="form-check-label">
               <input
                 type="radio"
-                style="border-color: red !important; color: red !important"
-                class="form-check-input"
+                style="
+                  padding: 200px;
+                  background-color: #f0ffff;
+                  border: 1px solid red;
+                "
                 name="gender"
                 value="other"
               />
@@ -103,7 +106,7 @@
           <input type="password" class="form-control" id="password" />
           <p
             id="msg-pass"
-            class="w-100 d-none rounded border bg-error border-danger text-danger"
+            class="w-100 d-none rounded border text-center bg-error border-danger text-danger"
           ></p>
         </div>
 
